# mork

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  AGENTS.md  Cargo.toml  DESIGN.md  PHASES.md  index.html
.agents/skills/hint-led-coding/: SKILL.md
.cursor/skills/jj-split-changes/: SKILL.md
.github/workflows/: ci.yml  prek.yml  test.yml
assets/textures/floor/: SOURCES.txt
src/: constants.rs  lib.rs  main.rs
src/components/: camera.rs  character_visual.rs  combat.rs  mod.rs  transform.rs
src/plugins/: character_visual.rs  combat.rs  enemy.rs  mod.rs
src/resources/: mod.rs
src/systems/: character_visual.rs  combat.rs  input.rs  mod.rs  movement.rs
