[package]
name = "mork"
version = "0.1.0"
edition = "2024"

[lib]
name = "mork"
path = "src/lib.rs"

[features]
default = ["combat", "camera", "input", "audio", "debug_ui"]
combat = []
camera = []
input = []
audio = []
debug_ui = []
procgen = []
roguelite = []

[dependencies]
bevy = "0.18"
bevy_rapier3d = { version = "0.33", features = ["debug-render-3d"] }
leafwing-input-manager = "0.20"
bevy_egui = "0.39"
bevy_kira_audio = "0.25"
bevy_third_person_camera = "0.4.0"
bevy-tnua = "0.31.0"
bevy-tnua-rapier3d = "0.16.0"

[dev-dependencies]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
